src/core-ui/ModalSecondary/ModalSecondary.module.scss
.backdrop {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.7);
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 999;
}

.modal {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  min-width: 60rem;
  max-width: 60rem;
  min-height: 25rem;
  background-color: var(--color-white);
  border-radius: 0.3rem;
  border-bottom: 0.5rem solid var(--color-primary);
  z-index: 9999;
  overflow: hidden;
  @media (max-width: 700px) {
    min-width: 90%;
  }
  &--read {
    height: 45rem;
    overflow: auto;
  }
}

